Deploy and purge CDN
This introduces the concept of a staging container and a
production container, mapped to `staging` and `master` branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,11 @@
 language: node_js
 node_js:
-- '0.10'
-before_install: npm install -g jsonlint
+  - '0.10'
+before_install: npm install -g grunt-cli jsonlint
 script:
-- jsonlint -q src/encoreNav.json
-before_deploy: cd src
-deploy:
-  provider: cloudfiles
-  username: encorecloudfiles
-  api_key:
-    secure: fxJyUdU/31MnrCZx1iz8ru/8Vu3HGSzsTNCuGwJetipXpToD1nEPwpeqdV5xcXi8LhFg36UWRye5RSji2RcHlxIKGJW+grGnOz1/KOAKMH4FyAg+Z+H3sZUJcFKRBWHLbIacE1n4xSkpnO5XRLba13JOIutvhLs7QuvxQm1eV7o=
-  region: DFW
-  container: encore-ui-nav
-  skip_cleanup: true
-  on:
-    repo: rackerlabs/encore-ui-nav
-    branch: master
+  - jsonlint -q src/encoreNav.json
+after_success:
+  - bash ./scripts/deploy.sh
+env:
+  global:
+      - secure: "Zb/DkqSIQ81gusnn6jNcWU9OV3OZlzzvYDylCONh20gGjX4JlOe03/btyvj+8lzaRlnRO0ie/CIr/RMgIZHYIr4wZUBxqfDWQS7rQh68gBUILOvCXRiQWnfKa9OShiL84YNDFnK+WWp86KVhqDICyjusK5UKK//E/Ae3k4lZXI8=" 
